--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
     "gsap": "^3.12.5",
     "intersection-observer": "^0.12.2",
     "next": "14.1.2",
